--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     background: #fff;
     padding: 20px;
     border-radius: 5px;
+    overflow-x:scroll;
 }
 
 h2, h3 {
@@ -213,4 +214,11 @@ h1 img {
     background-color: #f1f1f1;
     font-weight: bold;
 }
-
+.supercalendario th{
+	font-weight:normal;
+	font-size:8px !important;
+}
+.supercalendario td{
+	height:auto !important;
+	padding:0px !important;
+}
